@@ -1,6 +1,6 @@
 {
 	"LANGUAGE": "English",
-	"TRANSLATOR": "IcyRelic",
+	"TRANSLATOR": "IcyRelic, Dustin",
 	"General.HostRequired": "This feature requires host!",
 	"General.HostTag": "(Host Only)",
 	"General.HostStormyTag": "(Host/Stormy)",
@@ -76,6 +76,7 @@
 	"SelfTab.TeleportExit": "Teleport To Exit",
 	"SelfTab.VehicleGodMode": "Vehicle God Mode",
 	"SelfTab.EggsNeverExplode": "Eggs Never Explode",
+	"SelfTab.EggsAlwaysExplode": "Eggs Always Explode",
 	"SelfTab.GrabItemsBeforeGame": "Grab Items Before Game",
 	"SelfTab.OpenAllBigDoors": "Open All Big Doors",
 	"SelfTab.CloseAllBigDoors": "Close All Big Doors",
@@ -131,7 +132,7 @@
 	"PlayerTab.Spectate": "Spectate",
 	"PlayerTab.MiniCam": "Mini Cam",
 	"PlayerTab.PlayerInfo": "Player Information",
-	"PlayerTab.LMUser": "LethalMenu Version:",
+	"PlayerTab.LMUser": "Lethal Menu Version:",
 	"PlayerTab.SteamId": "SteamID:",
 	"PlayerTab.PlayerId": "PlayerID:",
 	"PlayerTab.PlayerStatus": "Status:",
@@ -180,6 +181,8 @@
 	"ServerTab.CopyLobbyID": "Copy Lobby ID",
 	"ServerTab.JoinLobby": "Join Lobby",
 	"ServerTab.Message": "Message",
+	"ServerTab.ForceMeteorShower": "Force Meteor Shower",
+	"ServerTab.ClearMeteorShower": "Clear Meteor Shower",
 	"Server.Message": "Message",
 	"TrollTab.Title": "Troll",
 	"TrollTab.ShipHorn": "Toggle Ship Horn",
@@ -324,7 +327,7 @@
 	"LootManager.ShowShipItems": "Show Ship Items",
 	"WeatherManager.Title": "Weather Manager",
 	"FirstSetup.Title": "First Setup",
-	"FirstSetup.Welcome": "Welcome to LethalMenu, Please choose your menu keybind and language.",
+	"FirstSetup.Welcome": "Welcome to Lethal Menu, Please choose your menu keybind and language.",
 	"FirstSetup.SelectLanguage": "Select Language:",
 	"FirstSetup.SelectKeybind": "Select Menu Keybind:",
 	"FirstSetup.Complete": "Complete Setup",
